--- a/proyecto.html
+++ b/proyecto.html
@@ -10,6 +10,7 @@
 <body>
     <title>Código Enigma</title>
   </head>
+  <div class="fondo">
   <body>
     <header>
       <h1>Código Enigma</h1>
@@ -44,4 +45,5 @@
       </section>
     </main>
 </body>
+</div>
 </html>
