--- a/proyecto.html
+++ b/proyecto.html
@@ -15,6 +15,7 @@
     <header>
       <h1>Código Enigma</h1>
     </header>
+    <div class="cuadro"></div>
     <main>
       <section>
         <div>
@@ -43,6 +44,7 @@
           </button>
         </div>
       </section>
+    </div>
     </main>
 </body>
 </div>
