--- a/proyecto.html
+++ b/proyecto.html
@@ -30,9 +30,9 @@
             </button>
             <button id="decipher" name="decipher" type="button">
               <i> Descifrar </i>
+              </button>
             </button>
           </div>
-        </div>
       </section>
       <section>
         <div>
