--- a/proyecto.html
+++ b/proyecto.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Código Enigma</title>
-    <link rel="stylesheet" href="css/ejemplo.css" />
+    <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
     <header>
