--- a/proyecto.html
+++ b/proyecto.html
@@ -21,13 +21,13 @@
         <div>
           <label for="message">Mensaje secreto</label>
           <br>
-          <textarea id="msg" name="textarea" maxlength="280" placeholder="Escribe o pega tu mensaje secreto aquí"></textarea>
+          <textarea   id="msg" name="textarea" maxlength="280" placeholder="Escribe o pega tu mensaje secreto aquí"></textarea>
           <br>
           <span id="counter">0/500</span>
           <br>
           <label for="offset">Clave secreta</label>
           <br>
-          <input id="offset" type="number" min="-100" max="100" placeholder="Ingresa tu clave secreta aquí" name="offset" step="1">
+          <input class="cuadrode" id="offset" type="number" min="-100" max="100" placeholder="Ingresa tu clave secreta aquí" name="offset" step="1">
           <div >
             <button id="cipher" name="cipher" type="button">
               <i >Cifrar</i> 
